# OpenAI_Agent_SDK_Standard_project

./: .gitignore  IMPROVEMENTS_SUMMARY.md  MIGRATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md  README_BEST_PRACTICES.md  UV_doucmentation.txt  WORKFLOW.md  agents_config.py  database_mock.py  main.py  models.py  pyproject.toml  requirements.txt  simple_agent.py  testAgent.py  tools.py  traditational_nenv.txt
data/: README.md
docs/: DATABASE.md  DATABASE_INTEGRATION.md  README.md
examples/: README.md
financial_agent_pro/: main.py
logs/: README.md
scripts/: README.md
src/: __init__.py  main.py
src/agents/: __init__.py  workforce.py
src/config/: settings.py
src/models/: responses.py
src/services/: agent_service.py  database.py
src/tools/: knowledge_base.py
src/utils/: constants.py  logger.py
test_working_Agent/: simple_agent.py  testAgent.py
tests/: test_models.py  test_tools.py
